plugin issue fixed